fix homepage globe on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -850,6 +850,10 @@ table td {
   z-index: 9999;
 }
 
+.m-8 {
+  margin: 2rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -936,10 +940,6 @@ table td {
   height: 275px;
 }
 
-.h-\[480px\] {
-  height: 480px;
-}
-
 .h-auto {
   height: auto;
 }
@@ -978,10 +978,6 @@ table td {
 
 .w-\[450px\] {
   width: 450px;
-}
-
-.w-\[480px\] {
-  width: 480px;
 }
 
 .w-full {
@@ -1203,6 +1199,10 @@ table td {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-2 {
@@ -1523,6 +1523,14 @@ h6 {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-\[480px\] {
+    height: 480px;
+  }
+
+  .sm\:w-\[480px\] {
+    width: 480px;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1533,6 +1541,10 @@ h6 {
 
   .sm\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .sm\:p-0 {
+    padding: 0px;
   }
 }
 
